// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-service-weather-state-counter-field Renders \`c-service-weather-state-counter-field\` with custom props 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field v-select v-select--chips v-select--chips--small v-select--is-multi"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active v-label--is-disabled theme--light"
          style="left: 0px; position: absolute;"
        >
          Severity
        </label>
        <div
          class="v-select__selections"
        >
          <span
            class="v-chip--select v-chip v-chip--disabled v-chip--no-color theme--light v-size--small"
            tabindex="-1"
          >
            <span
              class="v-chip__content"
            >
              Acknowledged
            </span>
          </span>
          <span
            class="v-chip--select v-chip v-chip--disabled v-chip--no-color theme--light v-size--small"
            tabindex="-1"
          >
            <span
              class="v-chip__content"
            >
              Number of alarms
            </span>
          </span>
          <input
            aria-readonly="false"
            autocomplete="off"
            disabled="disabled"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate v-icon--disabled material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="customName"
          type="hidden"
          value="acked,all"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-service-weather-state-counter-field Renders \`c-service-weather-state-counter-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    id="list-43"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="true"
      class="v-list-item primary--text v-list-item--active v-list-item--link theme--light v-list-item--highlighted"
      id="list-item-52-0"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              check_box
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of alarms
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="v-list-item v-list-item--disabled theme--light"
      id="list-item-52-1"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of active alarms
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="v-list-item v-list-item--disabled theme--light"
      id="list-item-52-2"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of dependencies
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="v-list-item v-list-item--disabled theme--light"
      id="list-item-52-3"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Ok
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="v-list-item v-list-item--disabled theme--light"
      id="list-item-52-4"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Minor
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="v-list-item v-list-item--disabled theme--light"
      id="list-item-52-5"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Major
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="v-list-item v-list-item--disabled theme--light"
      id="list-item-52-6"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Critical
        </div>
      </div>
    </div>
    <div
      aria-selected="true"
      class="v-list-item primary--text v-list-item--active v-list-item--link theme--light"
      id="list-item-52-7"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              check_box
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Acknowledged
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="v-list-item v-list-item--disabled theme--light"
      id="list-item-52-8"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Not acknowledged
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="v-list-item v-list-item--disabled theme--light"
      id="list-item-52-9"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Under PBh
        </div>
      </div>
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="v-list-item v-list-item--disabled theme--light"
      id="list-item-52-10"
      role="option"
      tabindex="-1"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Acknowledged under PBh
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-service-weather-state-counter-field Renders \`c-service-weather-state-counter-field\` with default props 1`] = `
<div
  class="v-input theme--light v-text-field v-select v-select--chips v-select--chips--small v-select--is-multi"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Severity
        </label>
        <div
          class="v-select__selections"
        >
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="counter"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-service-weather-state-counter-field Renders \`c-service-weather-state-counter-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    id="list-9"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-16-0"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of alarms
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-16-1"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of active alarms
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-16-2"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Number of dependencies
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-16-3"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Ok
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-16-4"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Minor
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-16-5"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Major
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-16-6"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Critical
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-16-7"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Acknowledged
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-16-8"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Not acknowledged
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-16-9"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Under PBh
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-16-10"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__action"
      >
        <div
          class="v-simple-checkbox"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              check_box_outline_blank
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          Acknowledged under PBh
        </div>
      </div>
    </div>
  </div>
</div>
`;
